--- a/generated-customise.css
+++ b/generated-customise.css
@@ -10,10 +10,7 @@ To learn how this works, see http://wp.me/PEmnE-Bt
     top: 0; }
 
   #site-navigation.main-navigation .menu-menu-container {
-    display: none; }
-
-  #site-navigation.main-navigation .menu-toggle {
-    top: 0; } }
+    display: none; } }
 @media screen and (min-width: 768px) {
   .header-wrap a.site-logo-link {
     position: absolute;
@@ -43,6 +40,9 @@ To learn how this works, see http://wp.me/PEmnE-Bt
   .header-wrap a.site-logo-link {
     display: inline-block;
     padding-top: 12px; } }
+@media screen and (min-width: 561px) and (pointer: coarse) {
+  .site-header .menu-toggle {
+    top: 0; } }
 .header-wrap {
   background-color: #76b72a;
   color: white;
